--- a/toxins-chemicals/zyklon-b/index.html
+++ b/toxins-chemicals/zyklon-b/index.html
@@ -96,66 +96,39 @@
 				<tbody>
 					<tr>
 						<td><a href="/a/auschwitz/index.html">Auschwitz</a></td>
-						<td>
-
-							ca. 1,000,000
-												</td>
+						<td> ca. 1,000,000 </td>
 					</tr>
 					<tr>
-						<td><a href="/instruments/camp/mixed-purpose-camp/dachau/index.html"><span lang="en-US">Dachau</span></a></td>
-						<td>
-
-							a handful, if any
-												</td>
+						<td><a href="/instruments/camp/mixed-purpose-camp/dachau/index.html">Dachau</a></td>
+						<td> a handful, if any </td>
 					</tr>
 					<tr>
-						<td><a href="/instruments/camp/other-camp/gusen/index.html"><span lang="en-US">Gusen</span></a></td>
-						<td>
-
-							several hundred
-												</td>
+						<td><a href="/instruments/camp/other-camp/gusen/index.html">Gusen</a></td>
+						<td> several hundred </td>
 					</tr>
 					<tr>
-						<td><a href="/instruments/camp/majdanek/index.html"><span lang="en-US">Majdanek</span></a></td>
-						<td>
-
-							a few thousand, if any
-												</td>
+						<td><a href="/instruments/camp/majdanek/index.html">Majdanek</a></td>
+						<td> a few thousand, if any </td>
 					</tr>
 					<tr>
-						<td><a href="/instruments/camp/mauthausen/index.html"><span lang="en-US">Mauthausen</span></a></td>
-						<td>
-
-							several thousand
-												</td>
+						<td><a href="/instruments/camp/mauthausen/index.html">Mauthausen</a></td>
+						<td> several thousand </td>
 					</tr>
 					<tr>
-						<td><a href="/instruments/camp/neuengamme/index.html"><span lang="en-US">Neuengamme</span></a></td>
-						<td>
-
-							a few hundred
-												</td>
+						<td><a href="/instruments/camp/neuengamme/index.html">Neuengamme</a></td>
+						<td> a few hundred </td>
 					</tr>
 					<tr>
 						<td><a href="/instruments/camp/mixed-purpose-camp/ravensbruck/index.html">Ravensbrück</a></td>
-						<td>
-
-							up to 3,000
-												</td>
+						<td> up to 3,000 </td>
 					</tr>
 					<tr>
-						<td><a href="/instruments/camp/mixed-purpose-camp/sachsenhausen/index.html"><span lang="en-US">Sachsenhausen</span></a></td>
-						<td>
-
-							several thousand
-												</td>
+						<td><a href="/instruments/camp/mixed-purpose-camp/sachsenhausen/index.html">Sachsenhausen</a></td>
+						<td> several thousand </td>
 					</tr>
 					<tr>
-						<td><a href="/locations/camps/stutthof/index.html"><span lang="en-US">Stutthof</span></a></td>
-						<td>
-
-							several thousand
-												</td>
+						<td><a href="/locations/camps/stutthof/index.html">Stutthof</a></td>
+						<td> several thousand </td>
 					</tr>
 				</tbody>
 			</table>
@@ -165,7 +138,7 @@
 			<p>
 				(For more details, see <a href="/bibliography/index.html#Kalthoff">Kalthoff/Werner 1998</a>; <a href="/bibliography/index.html#Leipprand">Leipprand 2008</a>; <a href="/bibliography/index.html#Rudolf2020">Rudolf 2020</a>, pp. 70-85, 236-240; <a href="/bibliography/index.html#Mattogno2019">Mattogno 2019</a>, pp. 444-453; <a href="/bibliography/index.html#Mattogno2021a">2021a</a>, pp. 71-83.)
 			</p>
-			<!-- #bbinclude "footer.incl" -->
+<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
